typescript should be working

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-NODE_ENV=<node_environment (i.e. production)>
+# Extracted from exosystem.config.js
+NODE_ENV='development'
+ETHEREUM_ADMIN_ACCOUNT=''
+ETHEREUM_ADMIN_PRIVATE_KEY=''
+FUSE_POOL_DIRECTORY_CONTRACT_ADDRESS='0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9'
+FUSE_SAFE_LIQUIDATOR_CONTRACT_ADDRESS='0x0165878A594ca255338adfa4d48449f69242Eb8F'
+LIQUIDATION_STRATEGY='uniswap'
+SUPPORT_ALL_PUBLIC_POOLS=true
+SUPPORTED_POOL_COMPTROLLERS=''
+SUPPORTED_INPUT_CURRENCIES='ETH'
+SUPPORTED_OUTPUT_CURRENCIES='ETH'
+EXCHANGE_TO_TOKEN_ADDRESS='ETH'
+MINIMUM_PROFIT_ETH=0
+WEB3_HTTP_PROVIDER_URL='http://localhost:8546'
+LIQUIDATION_INTERVAL_SECONDS=300
