--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "fuse-liquidator-bot",
   "version": "0.1.0",
   "description": "Liquidates unhealthy Fuse pool loans.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "$(yarn bin)/pm2 install typescript && pm2 install typescript",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node index.ts",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop ecosystem.config.js",
+    "status": "pm2 list"
   },
   "repository": {
     "type": "git",
@@ -19,6 +24,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "big.js": "^6.0.3",
+    "dotenv": "^8.2.0",
+    "inquirer": "^7.3.3",
+    "pm2": "^4.5.1",
     "web3": "^1.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "ts-loader": "^8.0.14",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
