--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuse-liquidator-bot",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Liquidates unhealthy Fuse pool loans.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "https://github.com/Rari-Capital/fuse-liquidator-bot.git"
   },
   "author": "David Lucid <david@rari.capital>",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/Rari-Capital/fuse-liquidator-bot/issues"
   },
@@ -20,5 +20,9 @@
     "axios": "^0.21.1",
     "big.js": "^6.0.3",
     "web3": "^1.3.1"
+  },
+  "devDependencies": {
+    "@flashbots/ethers-provider-bundle": "^0.3.1",
+    "ethers": "^5.1.4"
   }
 }
