--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "axios": "^0.21.1",
     "big.js": "^6.0.3",
     "web3": "^1.3.1"
+  },
+  "devDependencies": {
+    "@flashbots/ethers-provider-bundle": "^0.3.1",
+    "ethers": "^5.1.4"
   }
 }
