--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Liquidates unhealthy Fuse pool loans.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pm2": "NODE_ENV=production pm2 start build/server.js --watch -i max",
+    "pm2:staging": "NODE_ENV=staging pm2 start build/server.js --watch -i max",
+    "prod": "NODE_ENV=production node build/server.js",
+    "staging": "NODE_ENV=staging node build/server.js",
+    "dev": "HTTPS=true NODE_ENV=development ts-node-dev --inspect --respawn src/server.ts",
+    "test": "NODE_ENV=test nyc ./node_modules/.bin/mocha --require ts-node/register ./src/test/**/**/**/**/*.test.ts",
+    "build": "rimraf build && tsc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -13,12 +19,16 @@
   "author": "David Lucid <david@rari.capital>",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/Rari-Capital/fuse-liquidator-bot/issues"
+    "url": "https://github.com/Midas-Capital/fuse-liquidator-bot/issues"
   },
-  "homepage": "https://github.com/Rari-Capital/fuse-liquidator-bot#readme",
+  "homepage": "https://github.com/Midas-Capital/fuse-liquidator-bot#readme",
   "dependencies": {
     "axios": "^0.21.1",
     "big.js": "^6.0.3",
-    "web3": "^1.3.1"
+    "web3": "^1.3.1",
+    "@ethersproject/contracts": "^5.5.0",
+    "@ethersproject/providers": "^5.5.2",
+    "@midas-capital/sdk": "0.1.3-beta.16",
+    "ethers": "^5.5.3"
   }
 }
