--- a/package.json
+++ b/package.json
@@ -30,5 +30,16 @@
     "@ethersproject/providers": "^5.5.2",
     "@midas-capital/sdk": "0.1.3-beta.16",
     "ethers": "^5.5.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "eslint": "8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "2.5.1",
+    "typescript": "4.5.5"
   }
 }
