--- a/package.json
+++ b/package.json
@@ -23,16 +23,14 @@
   },
   "homepage": "https://github.com/Midas-Capital/fuse-liquidator-bot#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "big.js": "^6.0.3",
-    "web3": "^1.3.1",
     "@ethersproject/contracts": "^5.5.0",
     "@ethersproject/providers": "^5.5.2",
-    "@midas-capital/sdk": "0.1.3-beta.16",
+    "@midas-capital/sdk": "0.1.3-beta.18",
+    "axios": "^0.21.1",
+    "dotenv": "^16.0.0",
     "ethers": "^5.5.3"
   },
   "devDependencies": {
-    "ts-node": "^10.4.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "^8.3.0",
@@ -40,6 +38,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.5"
   }
 }
