--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ SUPPORTED_INPUT_CURRENCIES=0x0000000000000000000000000000000000000000
 # (other seized currencies will be exchanged to EXCHANGE_TO_TOKEN_ADDRESS);
 # Use contract addresses for tokens, zero address for for native chain token
 SUPPORTED_OUTPUT_CURRENCIES="0x0000000000000000000000000000000000000000,0x943832D08C12F1ee006895815E5398d0f7E2DdbA,0x765C058189560e00Dc581Ab5bFF01deBF9f268DF"
+# target chainId to use
+TARGET_CHAIN_ID=1337
