fix conditional that made liquidator not liquidate token pools

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ ETHEREUM_ADMIN_PRIVATE_KEY=
 WEB3_HTTP_PROVIDER_URL=http://0.0.0.0:8545
 # Separate by commas--if using your own capital for liquidations, supported currencies to repay.
 # Use contract addresses for tokens, zero address for for native chain token
-SUPPORTED_INPUT_CURRENCIES=0x0000000000000000000000000000000000000000
+SUPPORTED_INPUT_CURRENCIES="0x0000000000000000000000000000000000000000,0x943832D08C12F1ee006895815E5398d0f7E2DdbA,0x765C058189560e00Dc581Ab5bFF01deBF9f268DF"
 # Separate by commas--supported currencies to receieve as seized collateral
 # (other seized currencies will be exchanged to EXCHANGE_TO_TOKEN_ADDRESS);
 # Use contract addresses for tokens, zero address for for native chain token
